input/files/examples/errors/JavaExampleError005.java
package errors;

public class JavaExampleError002 {
	int private test; // Should be private int
}